# MPaste

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  ClipboardItem.cpp  ClipboardItem.h  ClipboardMonitor.cpp  ClipboardMonitor.h  MPaste.cpp  MPaste.desktop  MPasteSettings.cpp  MPasteSettings.h  XUtils.cpp  XUtils.h  deb.cmake  readme.md  resources.qrc
KDSingleApplication/: CMakeLists.txt  kdsingleapplication.h
data/: CardPreviewMetrics.h  ClipboardItem.cpp  ClipboardItem.h  ClipboardItemImageDecoder.cpp  ClipboardItemImageDecoder.h  ClipboardItemUrlParser.cpp  ClipboardItemUrlParser.h  ContentClassifier.h  ContentType.h  LocalSaver.cpp  LocalSaver.h  OpenGraphItem.cpp  OpenGraphItem.h  PreviewClassifier.h  PreviewKind.h  README.md
debian/: README.md
debian/doc/: README.md  changelog  copyright
debian/scripts/: README.md  postinst
docs/: clipboard-item-architecture.md
images/: README.md
resources/: README.md  app_zh.qm  mpaste.rc
resources/style/: README.md  darkStyle.qss  defaultStyle.qss
screenshot/: README.md
tools/: inspect_mpaste.py
translations/: MPaste_zh_CN.ts  README.md  app_zh.ts
utils/: ClipboardBoardService.cpp  ClipboardBoardService.h  ClipboardBoardServiceAsync.cpp  ClipboardBoardServiceIO.cpp  ClipboardBoardServiceInternal.h  ClipboardExportService.cpp  ClipboardExportService.h  ClipboardMonitor.cpp  ClipboardMonitor.h  HotKeyManager.cpp  HotKeyManager.h  IconResolver.cpp  IconResolver.h  MPasteSettings.cpp  MPasteSettings.h  MxGraphRenderer.cpp  MxGraphRenderer.h  OcrService.cpp  OcrService.h  OpenGraphFetcher.cpp  OpenGraphFetcher.h  PlatformRelated.cpp  PlatformRelated.h  README.md  SingleApplication.cpp  SingleApplication.h  ThemeManager.cpp  ThemeManager.h  ThumbnailBuilder.cpp  ThumbnailBuilder.h
widget/: AboutWidget.cpp  AboutWidget.h  AboutWidget.ui  BoardContextMenu.cpp  BoardHoverActions.cpp  BoardInternalHelpers.h  BoardPagination.cpp  BoardViewWidgets.h  CardMetrics.h  CardTheme.h  ClipboardAppController.cpp  ClipboardAppController.h  ClipboardBoardActionService.cpp  ClipboardBoardActionService.h  ClipboardBoardModel.cpp  ClipboardBoardModel.h  ClipboardBoardProxyModel.cpp  ClipboardBoardProxyModel.h  ClipboardCardDelegate.cpp  ClipboardCardDelegate.h  ClipboardItemDetailsDialog.cpp  ClipboardItemDetailsDialog.h  ClipboardItemInnerWidget.cpp  ClipboardItemInnerWidget.h  ClipboardItemInnerWidget.ui  ClipboardItemPreviewDialog.cpp  ClipboardItemPreviewDialog.h  ClipboardItemRenameDialog.cpp  ClipboardItemRenameDialog.h  ClipboardItemWidget.cpp  ClipboardItemWidget.h  ClipboardPasteController.cpp  ClipboardPasteController.h  CopySoundPlayer.cpp  CopySoundPlayer.h  FileThumbWidget.cpp  FileThumbWidget.h  FileThumbWidget.ui  GlassPagePopup.h  MPasteSettingsWidget.cpp  (+25 more)
widget/cardrenderer/: CardBodyRenderer.cpp  CardBodyRenderer.h  ColorCardBody.cpp  ColorCardBody.h  FileCardBody.cpp  FileCardBody.h  ImageCardBody.cpp  ImageCardBody.h  LinkCardBody.cpp  LinkCardBody.h  OfficeCardBody.cpp  OfficeCardBody.h  RichTextCardBody.cpp  RichTextCardBody.h  TextCardBody.cpp  TextCardBody.h
